# monitor_exercise

./: CMakeLists.txt  readme.md
include/: fifo.h  monitor.h
src/: fifo.c  main.c  monitor.c
